--- a/20220316.ipynb
+++ b/20220316.ipynb
@@ -99,7 +99,7 @@
       "source": [
         "List 와 String은 Indenxing 방법이 똑같음 (: 사용)\n",
         "\n",
-        "+) List와 Tuplie: 사실상 비슷, tuple은 access, 더하기 등은 가능하나 내부적 information을 바꾸는 건 불가능. "
+        "+) List와 Tuple: 사실상 비슷, tuple은 access, 더하기 등은 가능하나 내부적 information을 바꾸는 건 불가능. "
       ],
       "metadata": {
         "id": "iCv0ZJ5rgpm4"
