Colaboratory를 통해 생성됨

--- a/20220316.ipynb
+++ b/20220316.ipynb
@@ -39,10 +39,74 @@
     {
       "cell_type": "markdown",
       "source": [
-        "1. **STRING**"
+        "# Introduction"
       ],
       "metadata": {
-        "id": "rsFfltmcEe_P"
+        "id": "8duEX73EJIsc"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "*   변수\n",
+        "\n",
+        "1.   numbers \n",
+        "2.   strings '', \"\" 사용\n",
+        "3.   list [ , , , ] 숫자 문자 다 가능\n",
+        "4.   dict\n",
+        "\n",
+        "\n",
+        "*   문법 \n",
+        "1. 조건문 if\n",
+        "2. 반복문 for \n",
+        "\n",
+        "*   함수\n",
+        "*   패키지: import하는 방법들 \n",
+        "\n",
+        "\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "jZL6Sn_kJNm5"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# 1. STRING"
+      ],
+      "metadata": {
+        "id": "_sG3GgWII_mM"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# String 에서의 Index\n",
+        "\n",
+        "\n",
+        "\n",
+        "*   a='abcdef123'\n",
+        "a=[:] 전부 다\n",
+        "\n",
+        "1.   a=[:] 전부 다\n",
+        "2.   a=[:3] 'abc'\n",
+        "3.   a=[3:-1] 'def12'\n",
+        "\n",
+        "--> List와 String은 Indexing 방법이 같다. (' : ' 사용)\n",
+        "\n",
+        "*   List, Tuple\n",
+        "\n",
+        "List는 [ ] , Tuple은 ( ) 사용\n",
+        "\n",
+        "List에 반해 Tuple은 Access, 더하기 등은 가능하나 내부적인 information을 바꾸는 것은 불가능함. \n",
+        "\n",
+        "둘 다 같은 역할이나 tuple이 생긴 이유는 사람들이 코딩 시 중요한 정보를 지우거나 변경할 것을 방지하기 위함. \n",
+        "\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "I2W32dvoKG8F"
       }
     },
     {
@@ -91,17 +155,6 @@
           ]
         }
       ]
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "List 와 String은 Indenxing 방법이 똑같음 (':' 사용)\n",
-        "\n",
-        "+) List와 Tuple: 사실상 비슷, tuple은 access, 더하기 등은 가능하나 내부적 information을 바꾸는 건 불가능. "
-      ],
-      "metadata": {
-        "id": "iCv0ZJ5rgpm4"
-      }
     },
     {
       "cell_type": "code",
@@ -260,7 +313,8 @@
         "outputId": "ac192f91-46ce-4ff0-a040-f0d63541124e"
       },
       "source": [
-        "s = s.strip()      \t          # a copy of s without leading or trailing whitespace\n",
+        "s = s.strip()      \t          # strip: 문장부호, space를 없애줌. \n",
+        "\n",
         "s"
       ],
       "execution_count": null,
@@ -278,22 +332,13 @@
       ]
     },
     {
-      "cell_type": "markdown",
-      "source": [
-        "strip: 문장부호, space를 없애줌. "
-      ],
-      "metadata": {
-        "id": "tRHX45EAhjuw"
-      }
-    },
-    {
       "cell_type": "code",
       "metadata": {
         "id": "l37g5DqQmAu2",
         "outputId": "c1eefe2c-0edc-4678-c67b-b8306ca13471"
       },
       "source": [
-        "tokens = s.split(' ')\t        # split s into a list wherever a t is found (whitespace by default)\n",
+        "tokens = s.split(' ')\t        # 빈칸을 중심으로 쪼개서 list를 생성하라\n",
         "tokens"
       ],
       "execution_count": null,
@@ -311,22 +356,13 @@
       ]
     },
     {
-      "cell_type": "markdown",
-      "source": [
-        "빈칸을 중심으로 쪼개서 list를 생성하라는 의미. \n"
-      ],
-      "metadata": {
-        "id": "KhSg5fAWhrAQ"
-      }
-    },
-    {
       "cell_type": "code",
       "metadata": {
         "id": "64sewKE8mAu2",
         "outputId": "e2e8dc1f-6b83-41ef-b746-7712099f2776"
       },
       "source": [
-        "s = ' '.join(tokens)\t        # combine the words of the text into a string using s as the glue\n",
+        "s = ' '.join(tokens)\t        # combine the words of the text into a string using s as the glue 다시 원문장으로 만듦. \n",
         "s"
       ],
       "execution_count": null,
@@ -342,15 +378,6 @@
           "output_type": "execute_result"
         }
       ]
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "다시 원문장으로 만듦. "
-      ],
-      "metadata": {
-        "id": "YLA_4pn_hxNU"
-      }
     },
     {
       "cell_type": "code",
@@ -390,10 +417,23 @@
     {
       "cell_type": "markdown",
       "source": [
-        "2. **FUNCTION**"
+        "# 2. **FUNCTION**"
       ],
       "metadata": {
         "id": "otoj7e5eEuGS"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "* 형태 \n",
+        "\n",
+        "def 함수명 (입력변수명) \n",
+        "\n",
+        "-> 작성시 입력변수 여러 개일 경우 ',' 사용하며 마지막에 : 입력 필수 (미입력시 error)\n"
+      ],
+      "metadata": {
+        "id": "E4QjdgzELfoL"
       }
     },
     {
@@ -458,10 +498,41 @@
     {
       "cell_type": "markdown",
       "source": [
-        "3. **SYNTAX**"
+        "# 3. **SYNTAX**"
       ],
       "metadata": {
         "id": "H4DpOyWRFVz8"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "\n",
+        "\n",
+        "1. 반복문 for \n",
+        "\n",
+        "    1) List를 바로 넣는 방법\n",
+        "\n",
+        "    2) in range를 통해 index를 거쳐서 넣는 방법\n",
+        "     \n",
+        "    + for 의 중첩 \n",
+        "\n",
+        "2. 조건문 if\n",
+        "\n",
+        "\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "_Seo3jjtL_3z"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "1. for loop에  List를 바로 넣는 방법 "
+      ],
+      "metadata": {
+        "id": "2kynl2t6MeWS"
       }
     },
     {
@@ -472,8 +543,8 @@
       },
       "source": [
         "a = [1, 2, 3, 4]\n",
-        "for i in a:\n",
-        "    print(i)"
+        "for i in a: #a에서 하나씩 입력변수를 받아 i에 넣고 loop를 돌림\n",
+        "    print(i) #띄어쓰기 필수 (종속)"
       ],
       "execution_count": null,
       "outputs": [
@@ -492,11 +563,12 @@
     {
       "cell_type": "markdown",
       "source": [
-        "for-loop\n",
-        "List를 바로 넣는 방법"
+        "2. In range를 통해 index를 거쳐서 넣는 방법\n",
+        "\n",
+        "--> range 안에 list가 만들어짐"
       ],
       "metadata": {
-        "id": "SM7FmY-h9t5U"
+        "id": "A-btnaWkMyvz"
       }
     },
     {
@@ -577,10 +649,10 @@
     {
       "cell_type": "markdown",
       "source": [
-        "in range를 통해 index를 거쳐서 넣는 방법"
+        "<IF문>"
       ],
       "metadata": {
-        "id": "UQGuPEMq9yzE"
+        "id": "KwmdRxyqM_oD"
       }
     },
     {
@@ -590,9 +662,9 @@
         "outputId": "69d729f8-996a-41be-d84b-f1bd2a7c809c"
       },
       "source": [
-        "a = 0\n",
-        "if a == 0:\n",
-        "    print(a)\n",
+        "a = 0  #등호의 의미가 아니라 assign 을 뜻함\n",
+        "if a == 0: #등호를 의미하려면 == 두번 써야 함    cf) if a!=0   -> != : 아니다, 같지 않다\n",
+        "    print(a) \n",
         "else:\n",
         "    print(a+1)"
       ],
@@ -606,16 +678,6 @@
           "name": "stdout"
         }
       ]
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "= -> 등호의 의미X, assign\n",
-        "!= 같지 않다"
-      ],
-      "metadata": {
-        "id": "kd8cgk059530"
-      }
     },
     {
       "cell_type": "code",
@@ -643,15 +705,25 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "<For의 중첩> -빈출"
+      ],
+      "metadata": {
+        "id": "rJLBfPCoNeyN"
+      }
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "ZPpZmVIHSLAY",
         "outputId": "0bbcc529-c1d8-4774-e1ad-9de8b9e065ce"
       },
       "source": [
-        "for i in range(1, 3):\n",
-        "    for j in range(3, 5):\n",
-        "        if j >=4:\n",
+        "for i in range(1, 3): #[1,2]\n",
+        "    for j in range(3, 5): #[3,4]    (i,g)=(1,3) (1,4) (2,3)(2,4)\n",
+        "\n",
+        "        if j >=4:  #j가 4일 때만 가능\n",
         "            print(i*j)"
       ],
       "execution_count": null,
@@ -667,6 +739,15 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "List Comprehension"
+      ],
+      "metadata": {
+        "id": "g0s_OeQQOA20"
+      }
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "JQXk5vi0SLAY",
@@ -674,7 +755,7 @@
       },
       "source": [
         "a = [1, 2, 3, 4]\n",
-        "b = [i for i in a if i >=2]\n",
+        "b = [i for i in a if i >=2] #list안에 for loop을 넣어서 list를 만들어라\n",
         "b"
       ],
       "execution_count": null,
@@ -696,10 +777,10 @@
     {
       "cell_type": "markdown",
       "source": [
-        "List 안에 For loop를 넣어서 List를 만들어라"
+        ""
       ],
       "metadata": {
-        "id": "CI0RFrf_-DGl"
+        "id": "QRyk0LrKN_ot"
       }
     },
     {
@@ -730,12 +811,21 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "Dict Comprehension"
+      ],
+      "metadata": {
+        "id": "7tRt4djpOQhJ"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "a = ['red', 'green', 'blue', 'purple']\n",
         "b = [1, 2, 3, 4]\n",
-        "c = {a[i]:b[i] for i in range(4)}\n",
-        "c"
+        "c = {a[i]:b[i] for i in range(4)} #=[0,1,2,3] -> {a[0]:b[0], a[1] b[1], ~~~~}\n",
+        "#dict: 중괄호 {} , a와 b가 pair가 되어 dict를 형성함"
       ],
       "metadata": {
         "id": "Z6JMoDOHu48B",
@@ -761,20 +851,25 @@
     {
       "cell_type": "markdown",
       "source": [
-        "dict: 중괄호 {}\n",
-        "a와 b가 pair가 되어 dict를 형성함"
+        "# 4. **IMPORT**"
       ],
       "metadata": {
-        "id": "TkGq5thB-Lgc"
+        "id": "2kV12QARFt2z"
       }
     },
     {
       "cell_type": "markdown",
       "source": [
-        "4. **IMPORT**"
+        "\n",
+        "*   install\n",
+        "*   import\n",
+        "*   built-in     ex) print, len\n",
+        "\n",
+        "\n",
+        "\n"
       ],
       "metadata": {
-        "id": "2kV12QARFt2z"
+        "id": "Yi8XCBmOOo2j"
       }
     },
     {
@@ -783,21 +878,22 @@
         "id": "JXicrkYOzPRo"
       },
       "source": [
-        "import numpy as np\n",
-        "n = np.random.randn(100)"
+        "import numpy as np   #100개의 random number가 만들어짐. \n",
+        "n = np.random.randn(100) #평균 0, standard deviation 1 사이의 난수 "
       ],
       "execution_count": null,
       "outputs": []
     },
     {
-      "cell_type": "markdown",
+      "cell_type": "code",
       "source": [
-        "100개의 random number가 만들어짐. \n",
-        "평균 0, standard deviation 1 사이의 난수 "
+        ""
       ],
       "metadata": {
-        "id": "A09yhDPf-hc_"
-      }
+        "id": "E0ThFEDqOxUt"
+      },
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -810,7 +906,7 @@
         "outputId": "2b0aeb6e-b426-450b-964c-4374a09dfeb0"
       },
       "source": [
-        "import matplotlib\n",
+        "import matplotlib   #play할 때마다 다른 histogram이 나옴. (random number의 특징)\n",
         "matplotlib.pyplot.hist(n)"
       ],
       "execution_count": null,
@@ -844,15 +940,6 @@
       ]
     },
     {
-      "cell_type": "markdown",
-      "source": [
-        "play할 때마다 다른 histogram이 나옴. (random number)의 특징\n"
-      ],
-      "metadata": {
-        "id": "O5IlCK4h-vwk"
-      }
-    },
-    {
       "cell_type": "code",
       "metadata": {
         "colab": {
@@ -863,7 +950,7 @@
         "outputId": "bec7eeff-8cae-4c3d-f090-eaf78cdb5fa9"
       },
       "source": [
-        "import matplotlib.pyplot\n",
+        "import matplotlib.pyplot #pyplot -> 하위 디렉토리인데 이렇게 윗줄에 써도 됨\n",
         "matplotlib.pyplot.hist(n)"
       ],
       "execution_count": null,
@@ -895,15 +982,6 @@
           }
         }
       ]
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "pyplot - 하위 directory인데 이렇게 윗줄에 써도 됨. "
-      ],
-      "metadata": {
-        "id": "dj7PaHNU-4Ri"
-      }
     },
     {
       "cell_type": "code",
@@ -1049,7 +1127,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "5. **Numpy_matplotlib**"
+        "# 5. **Numpy_matplotlib**"
       ],
       "metadata": {
         "id": "6ATP_kjOF9Ye"
@@ -1094,7 +1172,7 @@
         "outputId": "8a4d14a6-b816-432a-caae-902c8c640f33"
       },
       "source": [
-        "x = np.array([1,2,3])\n",
+        "x = np.array([1,2,3]) #list 를 array로 바꿔야 함, 1d array (3개짜리 1차원 array)\n",
         "print(x)\n",
         "print(type(x))\n",
         "print(x.shape)"
@@ -1111,16 +1189,6 @@
           ]
         }
       ]
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "list 를 array로 바꿔야 함\n",
-        "1d array (3개짜리 1차원 array)"
-      ],
-      "metadata": {
-        "id": "Bs3GoUp-_dgU"
-      }
     },
     {
       "cell_type": "code",
@@ -1188,7 +1256,7 @@
         "outputId": "3ff3368b-6bb1-4664-933e-8504613780b1"
       },
       "source": [
-        "x = np.array([[1,2,3], [4,5,6]])\n",
+        "x = np.array([[1,2,3], [4,5,6]]) #이중 List - row 2개, columns 3개\n",
         "print(x)\n",
         "print(type(x))\n",
         "print(x.shape)"
@@ -1208,16 +1276,6 @@
       ]
     },
     {
-      "cell_type": "markdown",
-      "source": [
-        "이중 list\n",
-        "row 2개 column 3개"
-      ],
-      "metadata": {
-        "id": "T8Fs4YIA_1Kj"
-      }
-    },
-    {
       "cell_type": "code",
       "metadata": {
         "id": "C1ogg6iZ7yir",
@@ -1227,7 +1285,7 @@
         "outputId": "baf27f4e-10a7-40bb-82f4-bf470d8de90c"
       },
       "source": [
-        "x = np.array([[[1,2,3], [4,5,6]], [[7,8,9], [10,11,12]]])\n",
+        "x = np.array([[[1,2,3], [4,5,6]], [[7,8,9], [10,11,12]]]) #대괄호 갯수로 몇 차원인지 알 수 있음. (3d array), 중첩된 list로 array 만듦\n",
         "print(x)\n",
         "print(type(x))\n",
         "print(x.shape)"
@@ -1259,7 +1317,7 @@
         "outputId": "047fb9dd-8c90-4dbf-9f12-35123bed1052"
       },
       "source": [
-        "x = np.ones([2, 2, 3])\n",
+        "x = np.ones([2, 2, 3]) #1로 다 채움\n",
         "print(x)\n",
         "print(type(x))\n",
         "print(x.shape)"
@@ -1282,18 +1340,6 @@
       ]
     },
     {
-      "cell_type": "markdown",
-      "source": [
-        "대괄호의 개수는 차원을 의미(3d array)\n",
-        "중첩된 list로 array를 만듦\n",
-        "\n",
-        "np.ones : 1로 다 채움. "
-      ],
-      "metadata": {
-        "id": "1M8cp_DSAB-C"
-      }
-    },
-    {
       "cell_type": "code",
       "metadata": {
         "id": "b_F-ccY08zzl",
@@ -1303,7 +1349,7 @@
         "outputId": "d56dd759-bbd1-48d5-d208-4a2084fe1cec"
       },
       "source": [
-        "x = np.zeros([2, 2, 3])\n",
+        "x = np.zeros([2, 2, 3]) #0으로 다 채움\n",
         "print(x)\n",
         "print(type(x))\n",
         "print(x.shape)\n",
@@ -1355,7 +1401,7 @@
     {
       "cell_type": "code",
       "source": [
-        "np.random.normal(0, 1, [2,3,4])"
+        "np.random.normal(0, 1, [2,3,4]) #normal distribution 의 nd array를 만드는 함수, 3d array"
       ],
       "metadata": {
         "id": "pCVnElBgan70",
@@ -1385,13 +1431,15 @@
       ]
     },
     {
-      "cell_type": "markdown",
+      "cell_type": "code",
       "source": [
-        "normal distribution 의 nd array를 만드는 함수"
+        ""
       ],
       "metadata": {
-        "id": "nDa3CSXXANME"
-      }
+        "id": "srNzTufOPyd_"
+      },
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -1406,6 +1454,17 @@
     },
     {
       "cell_type": "code",
+      "source": [
+        ""
+      ],
+      "metadata": {
+        "id": "zr8E1xEsP2QS"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
       "metadata": {
         "id": "z1oOAB6dShBD",
         "colab": {
@@ -1415,9 +1474,9 @@
         "outputId": "db329362-279b-4166-f67a-c2d40d28a0a5"
       },
       "source": [
-        "x = np.random.normal(0, 1, 100)\n",
+        "x = np.random.normal(0, 1, 100) #1d array, 긴 한줄의 수열이 나옴\n",
         "print(x)\n",
-        "plt.hist(x, bins=10)"
+        "plt.hist(x, bins=10) #bins 통의 개수 10개= 그래프 항목"
       ],
       "execution_count": null,
       "outputs": [
@@ -1482,18 +1541,6 @@
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "(0,1,100) : 1d array\n",
-        "긴 한줄의 수열이 나옴\n",
-        "\n",
-        "bins:통의 개수\n"
-      ],
-      "metadata": {
-        "id": "siZTcf8aATzM"
-      }
-    },
-    {
-      "cell_type": "markdown",
       "metadata": {
         "id": "G0exvwBbShBE"
       },
@@ -1504,8 +1551,18 @@
     {
       "cell_type": "markdown",
       "source": [
-        "numpy는 1) nd array 2) create random number/\n",
-        "matplot 1) histogram 2) plotting\n",
+        "**1. numpy**\n",
+        "\n",
+        "*   nd array \n",
+        "*   create random number\n",
+        "\n",
+        "\n",
+        "**2. matplot**\n",
+        "\n",
+        "*   histogram\n",
+        "*   plotting\n",
+        "\n",
+        "\n",
         "-> numpy로 sine 곡선을 만들 것"
       ],
       "metadata": {
@@ -1525,15 +1582,19 @@
       "source": [
         "plt.figure()\n",
         "\n",
-        "theta1 = np.linspace(0, 2*np.pi, 100)\n",
+        "theta1 = np.linspace(0, 2*np.pi, 100) # 0부터 2pi(360도)까지 (포함) 100개의 숫자를 만들어라.\n",
         "s1 = np.sin(theta1)\n",
-        "theta2 = np.linspace(0, 2*np.pi, 100) + np.pi/2\n",
+        "theta2 = np.linspace(0, 2*np.pi, 100) + np.pi/2 #360+90= 450도\n",
         "s2 = np.sin(theta2)\n",
         "\n",
+        "#Q. theta1에 있는 개수는 몇 개? : 100개\n",
+        "#Q. S1에 있는 숫자 개수? : 100개  -100개의 수를 넣어서 sine 함수를 통과, 출력시킨 것\n",
+        "#S2 도 100개 \n",
+        "\n",
         "plt.subplot(2, 1, 1) # (rows, columns, panel number)\n",
-        "plt.plot(theta1, s1, '.')\n",
+        "plt.plot(theta1, s1, '.') #theta1 = x, s1=y 값, plot은 2개의 숫자를 받아야 함\n",
         "plt.subplot(2, 1, 2) # (rows, columns, panel number)\n",
-        "plt.plot(theta2, s2, '.')"
+        "plt.plot(theta2, s2, '.')   # s2 sine곡선은 s1을 90도 이동시킨 것, 두 개의 그래프를 correlation 시켰을 때 값은 0이 도출됨. "
       ],
       "execution_count": null,
       "outputs": [
@@ -1591,18 +1652,12 @@
     {
       "cell_type": "markdown",
       "source": [
-        "0부터 2pi까지 (포함) 100개의 숫자를 만들어라.\n",
-        "theta1 개수 100개, S1 숫자 100개 -> 100개의 수를 넣어서 sine 함수를 통과, 출력시킨 것, S2도 100개\n",
-        "\n",
-        "plt.subplot(2,1,1): (rows, columns, panel number)\n",
-        "plot은 2개의 숫자를 받아야 함.\n",
-        "S2는 S1의 sine곡선을 90도 이동한 것이므로 2개의 그래프를 correlation 시켰을 때의 값은 0이 도출됨\n",
-        "\n",
-        "*Correlation (coef)\n",
+        "*Correlation.coef\n",
         "-1<=r <=1\n",
         "r값이 양수이면 정비례, 음수이면 반비례\n",
         "r의 절댓값이 0에 가까울수록 비례 희미\n",
-        "\n"
+        "\n",
+        "*2.419____e-17 : 10의 -17승, 값은 0에 수렴"
       ],
       "metadata": {
         "id": "p-dbxtZIAzSE"
