Colaboratory를 통해 생성됨

--- a/20220316.ipynb
+++ b/20220316.ipynb
@@ -430,7 +430,9 @@
         "\n",
         "def 함수명 (입력변수명) \n",
         "\n",
-        "-> 작성시 입력변수 여러 개일 경우 ',' 사용하며 마지막에 : 입력 필수 (미입력시 error)\n"
+        "-> 작성시 입력변수 여러 개일 경우 ',' 사용하며 마지막에 : 입력 필수 (미입력시 error)\n",
+        "\n",
+        "return 출력변수명"
       ],
       "metadata": {
         "id": "E4QjdgzELfoL"
@@ -456,15 +458,6 @@
       ],
       "execution_count": null,
       "outputs": []
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "def 함수명 (입력변수명) -> 여러 개일 경우 ',' 사용, ':' 작성필수 (안적으면 error) return 출력변수명"
-      ],
-      "metadata": {
-        "id": "GohsZ9ngFTMl"
-      }
     },
     {
       "cell_type": "code",
